tests/dataset/tpc-ds/compiler/go/q23.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq23431971651/001/main.go:457:2: syntax error: unexpected name at64 after top level declaration
